--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyFullscreenClock</string>
+    <string name="app_name">Fullscreen Clock</string>
     <string name="title_activity_settings">Settings</string>
     <string name="pref_description_auto_brightness">If on will set bright display at daytime and dark diplay at night</string>
     <string name="pref_description_speak_time">Enable/disable speaking time</string>
@@ -7,5 +7,6 @@
     <string name="pref_title_speak_time">Speak time</string>
     <string name="pref_title_font">Text font</string>
     <string name="pref_title_color">Text color</string>
+    <string name="info">Zoom text to change its size. \nTouch background to exit fullscreen</string>
 
 </resources>
